--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
 </head>
 <body>
-    <h1>introduction to get hub and get hub desktop</h1>
+    <h1>introduction to get hub and get hub desk</h1>
     
-</body>
+</body> 
 </html>
